# pbscript

./: .gitignore  Cargo.toml  build.sh  debug.sh
.agents/: Schema  Structure  TODO  Tech  session-summary.md
.github/workflows/: rust.yml
docs/superpowers/plans/: 2026-07-10-pbscript-sniper-quick-switch-plan.md  2026-07-10-pbscript-wayland-fix-plan.md  2026-07-12-pbscript-ar-smg-shotgun-modes-plan.md
docs/superpowers/specs/: 2026-07-10-pbscript-sniper-quick-switch-design.md  2026-07-12-pbscript-ar-smg-shotgun-modes-design.md
src/: main.rs
src/app/: state.rs
src/domain/: entities.rs  ports.rs
src/infra/: config_toml.rs  input_enigo.rs  listener.rs  mod.rs  ui_eframe.rs
