[package]
name = "pbscript"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
enigo = { version = "0.6", features = ["wayland"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
